syntax = "proto3";

option csharp_namespace = "Exchange.gRPCServer.Protos";

service FileService {
    rpc GetAllFiles(Empty) returns (stream FileMetadata);
}

message Empty {}

message FileMetadata {
    string fileName = 1;
    int64 fileSize = 2; 
    string fileExtension = 3; 
}