syntax = "proto3";

option csharp_namespace = "Exchange.gRPCServer.Protos";
import "google/protobuf/empty.proto";

message GetCurrencyStraminRequestDto{
	google.protobuf.Empty input = 1;
}

message CurrencyStreamResponse{
	int32 Id = 1;
	string CurrencyName = 2;
	string CurrencyCode = 3;
	double Price = 4;  
}

service CurrencyStreamRepository{
	rpc GetAllCurrrency(GetCurrencyStraminRequestDto) returns (stream CurrencyStreamResponse);
}